--- a/style.css
+++ b/style.css
@@ -21,3 +21,113 @@ body {
 */
 
 /* ----- zde zacni psat vlastni css ----- */
+/*body {
+    text-align: center;
+}*/
+body {
+    font-family: 'Rubik', sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+    background-color: #f5f5f5;
+}
+.zbozi {
+    width: 670px;    
+    margin: auto;
+}
+/*--------------------*/
+.vizual {
+    height: 440px;
+    background-image: linear-gradient(#06d7c1, #50cc49);
+    border-top-left-radius: 15px;
+    border-bottom-left-radius: 15px;
+    padding: 30px;
+    float: left;
+    width: 50%;
+    position: relative;
+} 
+/*.logo*/
+.slogan{
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.3;
+    color: white;
+    margin: 0;
+    padding-top: 30px;
+}
+.bota{
+    position: absolute;
+    right: 2px;
+    bottom: 5px;
+}
+.cenovka {
+    text-align: right;
+    color: white;
+    /*padding-top: 235px;*/
+    position: absolute;
+    right: 30px;
+    bottom: 30px;
+}
+.cena {
+    font-weight: 500;
+    font-size: 28px;
+}
+.zaruka {
+    font-size: 12px;
+}
+/*--------------------*/
+.detaily {
+    height: 440px;
+    padding: 30px;
+    padding-left: 365px;
+    background-color: white;
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
+}
+.nazev, .parametr {
+    font-weight: 500;
+    font-size: 20px;
+    text-transform: uppercase;
+}
+.produkt {
+    color: grey;
+}
+.popis {
+    padding: 15px 0px 30px 0px;
+    border-bottom: #04d8bf;
+    border-bottom-style: solid;
+    border-bottom-width: 1px;
+}
+.parametr {
+    font-size: 14px;
+    padding-top: 30px;
+}
+ul {
+    padding-bottom: 25px;
+    padding-left: 0px;        
+}
+.velikosti li {
+    display: inline-block;
+    padding: 10px;
+}
+.tlacitko {
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    text-decoration: none;
+    color: white;
+    padding: 15px;
+    background-color: #f05f42;
+    border-radius: 5px;
+}
+.velikosti li:hover/*, .velikosti li:focus*/ {
+    border-style: solid;
+    border-radius: 50%;
+    border-color: #f06141;
+    color: #f06141;
+    /*background-color: #2B9F00;*/
+}
+/*.vybrana li:hover {
+    border: 1px solid #f06141;
+    border-radius: 100%;
+    color: #f15f42;
+    font-weight: bold;
+}*/
